--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.8.0
   animated_text_kit: ^4.2.2
   rive: ^0.10.3
+  firebase_auth: ^4.3.0
 
 dev_dependencies:
   flutter_test:
