--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   rive: ^0.10.3
   firebase_auth: ^4.3.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
