--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   confetti: ^0.7.0
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.1
 
 
 dev_dependencies:
