--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geocoding: ^2.1.0
   flutter_map: ^4.0.0
   latlong2: ^0.8.1
+  google_fonts: ^4.0.4
 
 
 dev_dependencies:
@@ -81,6 +82,7 @@ flutter:
    - assets/rive_assets/movingplane.riv
    - assets/rive_assets/cat.riv
    - assets/face_icons/
+   - assets/animated_icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
