--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   latlong2: ^0.8.1
   google_fonts: ^4.0.4
   google_mobile_ads: ^3.0.0
+  firebase_analytics: ^10.4.2
+  bottom_sheet_scaffold: ^0.1.6
 
 
 dev_dependencies:
