--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   google_mobile_ads: ^3.0.0
   firebase_analytics: ^10.4.2
   bottom_sheet_scaffold: ^0.1.6
+  firebase_crashlytics: ^3.3.2
+  device_preview: ^1.1.0
+  firebase_performance: ^0.9.2+2
 
 
 dev_dependencies:
