--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
    - assets/rive_assets/cat.riv
    - assets/face_icons/
    - assets/animated_icons/
+   - assets/school_logos/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
