--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,7 +45,7 @@
     <key>GADApplicationIdentifier</key>
     <string>ca-app-pub-3530957535788194~2010813954</string>
     <key>NSUserTrackingUsageDescription</key>
-    <string>This app uses tracking data to show you personalized ads</string>
+    <string>This app usessss tracking data to show you personalized ads</string>
 
 </dict>
 </plist>
