--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_crashlytics: ^3.3.2
   device_preview: ^1.1.0
   firebase_performance: ^0.9.2+2
+  app_tracking_transparency: ^2.0.4
 
 
 dev_dependencies:
