--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.8.0
   animated_text_kit: ^4.2.2
-  rive: ^0.10.3
+ # rive: ^0.10.3
   firebase_auth: ^4.3.0
   provider: ^6.0.5
   firebase_database: ^10.0.16
@@ -56,6 +56,7 @@ dependencies:
   device_preview: ^1.1.0
   firebase_performance: ^0.9.2+2
   app_tracking_transparency: ^2.0.4
+ # location: ^4.4.0
 
 
 dev_dependencies:
@@ -92,6 +93,8 @@ flutter:
    - assets/animated_icons/
    - assets/school_logos/
    - assets/card_images/
+   - assets/fonts/OpenSans/OpenSans-Italic-VariableFont_wdth,wght.ttf
+   - assets/fonts/OpenSans/OpenSans-VariableFont_wdth,wght.ttf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -120,6 +123,12 @@ flutter:
          - asset: assets/fonts/Roboto/Roboto-Regular.ttf
          - asset: assets/fonts/Roboto/Roboto-Thin.ttf
          - asset: assets/fonts/Roboto/Roboto-ThinItalic.ttf
+
+     - family: OpenSans
+       fonts:
+         - asset: assets/fonts/OpenSans/OpenSans-Italic-VariableFont_wdth,wght.ttf
+         - asset: assets/fonts/OpenSans/OpenSans-VariableFont_wdth,wght.ttf
+     
 
   # fonts:
   #   - family: Schyler
