--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ flutter:
    - assets/card_images/
    - assets/fonts/OpenSans/OpenSans-Italic-VariableFont_wdth,wght.ttf
    - assets/fonts/OpenSans/OpenSans-VariableFont_wdth,wght.ttf
+   - assets/Wallpaper.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
