--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,6 +46,7 @@
     <string>ca-app-pub-3530957535788194~2010813954</string>
     <key>NSUserTrackingUsageDescription</key>
     <string>This app usessss tracking data to show you personalized ads</string>
-
+    <key>CFBundleIconName</key>
+    <string>AppIcon</string>
 </dict>
 </plist>
