--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,11 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   confetti: ^0.7.0
-  geolocator: ^9.0.2
+  geolocator: ^9.0.1
   geocoding: ^2.1.0
-  flutter_map: ^4.0.0
-  latlong2: ^0.8.1
-  google_fonts: ^4.0.4
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
+ # google_fonts: ^4.0.4
   google_mobile_ads: ^3.0.0
   firebase_analytics: ^10.4.2
   bottom_sheet_scaffold: ^0.1.6
