--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.8.0
   animated_text_kit: ^4.2.2
- # rive: ^0.10.3
   firebase_auth: ^4.3.0
   provider: ^6.0.5
   firebase_database: ^10.0.16
@@ -56,6 +55,7 @@ dependencies:
   device_preview: ^1.1.0
   firebase_performance: ^0.9.2+2
   app_tracking_transparency: ^2.0.4
+  rive: ^0.7.16
 
 
 dev_dependencies:
@@ -87,7 +87,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/rive_assets/movingplane.riv
-   - assets/rive_assets/cat.riv
+   - assets/rive_assets/pencil.riv
    - assets/face_icons/
    - assets/animated_icons/
    - assets/school_logos/
