--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,12 @@ dependencies:
   firebase_analytics: ^10.4.2
   bottom_sheet_scaffold: ^0.1.6
   firebase_crashlytics: ^3.3.2
-  device_preview: ^1.1.0
+# device_preview: ^1.1.0
   firebase_performance: ^0.9.2+2
   app_tracking_transparency: ^2.0.4
-  rive: ^0.7.16
+ # rive: ^0.7.16
+  firebase_storage: ^11.2.5
+  image_picker: ^1.0.1
 
 
 dev_dependencies:
