--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
  # rive: ^0.7.16
   firebase_storage: ^11.2.5
   image_picker: ^1.0.1
+  url_launcher: ^6.1.12
 
 
 dev_dependencies:
