--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.1
+version: 0.0.2+3
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -43,8 +43,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   confetti: ^0.7.0
-  geolocator: ^9.0.1
-  geocoding: ^2.1.0
+  #geolocator: ^9.0.1
+  #geocoding: ^2.1.0
 #  flutter_map: ^5.0.0
  # latlong2: ^0.9.0
  # google_fonts: ^4.0.4
@@ -57,7 +57,7 @@ dependencies:
   app_tracking_transparency: ^2.0.4
  # rive: ^0.7.16
   firebase_storage: ^11.2.5
-  image_picker: ^1.0.1
+  #image_picker: ^1.0.1
   url_launcher: ^6.1.12
 
 
